--- a/src/components/HeroBg/HeroBg.module.css
+++ b/src/components/HeroBg/HeroBg.module.css
@@ -1,5 +1,5 @@
 .bg{
-    background-image: url('../../assets/teste2.gif');
+    background-image: url('../../assets/bg.jpg');
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -7,15 +7,21 @@
     align-items: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: bottom;
 }
 
 .bg:before{
     content: "";
     position: absolute;
     inset: 0;
-    background: linear-gradient(rgba(0, 0, 0, 0.2) 0%, rgb(100 103 114) 100%), linear-gradient(rgba(0, 0, 0, 0.2) 0%, transparent 100%);
+    background: linear-gradient(rgba(0, 0, 0, 0.2) 0%, rgb(159 152 105) 100%), linear-gradient(rgba(0, 0, 0, 0.2) 0%, transparent 100%);
     z-index: 2;
     height: 100vh;
     width: 100vw;
 }
+
+@media screen and (max-width: 992px){
+    .bg{
+        background-position: bottom;
+    }
+}
+    
